--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         companyName: "DefaultCompany",
         productName: "Desarrollo Web",
         productVersion: "0.1",
+        matchWebGLToCanvasSize: true,
         showBanner: unityShowBanner,
       };
 
@@ -88,7 +89,7 @@
 
         var meta = document.createElement('meta');
         meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
         document.querySelector("#unity-container").className = "unity-mobile";
         canvas.className = "unity-mobile";
