--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <h1 id="rojo">Click the Dragon</h1>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=600 height=960 tabindex="0"></canvas>
+    <div id="unity-container" style="height: 60%; height: 60%;">
+      <canvas id="unity-canvas" width=600 height=960 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
